# comio

./: .gitignore  Philosophy.md  README.md  pyproject.toml
.github/workflows/: publish.yml
comio/: __init__.py  io.py  pipe.py
comio/adapters/: jsonl.py  queue.py  std.py  text_file.py
comio/sync/: __init__.py  io.py
tests/: test_copy.py  test_jsonl.py  test_pipe.py
