[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comio"
version = "0.2.1"
description = "Composable I/O primitives for async Python"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Repository = "https://github.com/sdkim96/comio"

[tool.pytest.ini_options]
asyncio_mode = "auto"
